# wolters_kluwer_case

./: .env.example  .gitignore  CODEX_FIXES.md  IMPLEMENTATION_PLAN.md  README.md  SUMMARY.md  VERIFICATION.md  generate_transcript.py  main.py  pyproject.toml
docs/: ARCHITECTURE.md  EVALUATION.md  RUNNING.md  WALKTHROUGH.md  wolters_kluwer_case.md
examples/: transcript_explore_the_2026_latest_nuclear_fusion_progress_ac.md  transcript_research_the_current_state_of_webassembly_adoption.md  transcript_webassembly.md
src/: __init__.py  agent.py  cli.py  context.py  executor.py  generate_transcript.py  models.py  planner.py  state.py  synthesizer.py
src/prompts/: planner.txt  synthesizer.txt
src/tools/: __init__.py  base.py  registry.py  web_search.py
tests/: test_agent.py  test_context.py  test_executor.py  test_generate_transcript.py  test_models.py  test_planner.py  test_state.py  test_synthesizer.py  test_tools.py
